# ProblemSolving

./: CMakeLists.txt  README.md  clean.sh  compile.sh
include/: account.hpp  checking.hpp  datatypes.hpp  hackerRank.hpp  linkedlist.hpp  savings.hpp  sortingalgos.hpp  tree.hpp  utilities.hpp
source/: account.cpp  checking.cpp  hackerRank.cpp  linkedlist.cpp  main.cpp  savings.cpp  sortingalgos.cpp  tree.cpp  utilities.cpp
